force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/OI_Edge_Type_Descriptor__mdt.object-meta.xml
<CustomObject>
    <label>OI Edge Type Descriptor</label>
    <pluralLabel>OI Edge Type Descriptors</pluralLabel>
    <description>The Domain Type Registry for edges — mirrors OI_Node_Type_Descriptor__mdt (DataModel.md §4.1). No records shipped this sprint.</description>
</CustomObject>