force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>One concise sentence explaining what this relationship means in Salesforce terms, shown in the graph legend so the legend teaches rather than just lists.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>