force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/fields/Line_Style__c.field-meta.xml
<CustomField>
    <fullName>Line_Style__c</fullName>
    <label>Line Style</label>
    <type>Text</type>
    <length>40</length>
    <description>Design-token reference for edge rendering.</description>
</CustomField>