force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/fields/Source_Role_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Role_Label__c</fullName>
    <description>What the SOURCE end of this relationship does, from the target's perspective — e.g. for Lookup To the source "References" the target. Used as the role chip on graph node cards and in drill-down rows so a user never has to decode an edge type.</description>
    <label>Source Role Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>