force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/fields/Target_Role_Label__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_Label__c</fullName>
    <description>What the TARGET end of this relationship is, from the source's perspective — e.g. for Lookup To the target is "Referenced By". The mirror of Source Role Label.</description>
    <label>Target Role Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>