force-app/main/default/objects/OI_Edge_Type_Descriptor__mdt/fields/Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Type_Key__c</fullName>
    <label>Type Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>e.g. SalesforceMetadata.References — the value that ends up in OI_Graph_Edge__c.Edge_Type__c.</description>
</CustomField>